--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-   background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(imagens/academia.jpg);
+   background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(../imagens/academia.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
