--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,19 @@
     font-family: "Lato", sans-serif;
 }
 
-body {
-   background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(../imagens/academia.jpg);
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: center;
 
+
+
+body {
+    width: 100vw;
+    height: 100%;
+    background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(../imagens/academia.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 header {
+    margin-top: 1rem;
     text-transform: uppercase;
     margin-top: 0.5rem;
     display: flex;
