--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 
 body {
+    overflow-x: hidden;
     width: 100vw;
     height: 100%;
     background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(../imagens/academia.jpg);
@@ -19,6 +20,7 @@ body {
 }
 
 header {
+    width: 100%;
     margin-top: 1rem;
     text-transform: uppercase;
     margin-top: 0.5rem;
@@ -64,7 +66,7 @@ header a:hover:before {
 
 main {
     height: 95.6vh;
-    width: 99vw;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
